fix(quote): ET-111  fixed the spacing between paragraphs

--- a/src/css/components/quote.css
+++ b/src/css/components/quote.css
@@ -39,7 +39,8 @@
     }
 
     @media (1440px<=width) {
-        left: 180px;
+        top: -100px;
+        left: 175px;
     }
 }
 
@@ -62,6 +63,7 @@
     }
     
     @media (1440px<=width) {
+        
         letter-spacing: 0.01em;
         max-width: 1008px;
     }
